# SingingGadgets

./: CMakeLists.txt  LICENSE  README.md  setup.py
CPPUtils/General/: WavBuf.h
ScoreDraft/: CMakeLists.txt  Document.py  Instrument.py  InstrumentBase.py  InstrumentShell.py  KarplusStrongInstrument.py  Meteor.py  SF2Instrument.py  Singer.py  SingerBase.py  UtauDraft.py  __init__.py
ScoreDraft/MeteorGenerator/: CMakeLists.txt  MeteorGenerator.cpp
SingingGadgets/: CMakeLists.txt  KarplusStrong.py  SF2.py  SF2Synth.py  TrackBuffer.py  UTAUUtils.py  __init__.py
SingingGadgets/BasicSamplers/: BasicSamplers.cpp  CMakeLists.txt  FrequencyDetection.cpp  Sample.h
SingingGadgets/KarplusStrong/: CMakeLists.txt  KarplusStrong.cpp
SingingGadgets/SF2Synth/: CMakeLists.txt  SF2Synth.cpp  SF2Synth.h  SF2Synth_Module.cpp
SingingGadgets/SimpleInstruments/: CMakeLists.txt  SimpleInstruments.cpp
SingingGadgets/TrackBuffer/: CMakeLists.txt  TrackBuffer.cpp  TrackBuffer.h  TrackBuffer_Module.cpp
SingingGadgets/UTAUUtils/: CMakeLists.txt  UTAUUtils.cpp
SingingGadgets/VoiceSampler/: CMakeLists.txt  HNM.cu  SentenceDescriptor.h  SentenceGeneratorCPU.cpp  SentenceGeneratorCUDA.cpp  SentenceGeneratorGeneral.cpp  SentenceGeneratorGeneral.h  VoiceSampler.cpp
SingingGadgets/WavUtils/: CMakeLists.txt  WavUtils.cpp
Test/: CMakeLists.txt  RapTest.py  SF2ScoreDraftTest.py  SF2Test.py  Test.py  TestScoreDraft.py
