cmake_minimum_required(VERSION 3.0)
project (SingingGadgets_ALL)
add_subdirectory(SingingGadgets)
add_subdirectory(SingingGadgets/WavUtils)
add_subdirectory(SingingGadgets/VoiceSampler)
add_subdirectory(SingingGadgets/TrackBuffer)
add_subdirectory(SingingGadgets/SF2Synth)
add_subdirectory(SingingGadgets/SimpleInstruments)
add_subdirectory(ScoreDraft)
