
set(PYTHON
__init__.py
SingerBase.py
UtauDraft.py
Notes.py
CVVCChineseConverter.py
XiaYYConverter.py
JPVCVConverter.py
TsuroVCVConverter.py
TTEnglishConverter.py
VCCVEnglishConverter.py
TTLyricSet.data
VCCVLyricSet.data

InstrumentBase.py
SF2Instrument.py
)

install(FILES ${PYTHON} DESTINATION ScoreDraft)
