
set(PYTHON
__init__.py
Singer.py
UtauDraft.py
Notes.py
CVVCChineseConverter.py
XiaYYConverter.py
JPVCVConverter.py
TsuroVCVConverter.py
TTEnglishConverter.py
VCCVEnglishConverter.py
TTLyricSet.data
VCCVLyricSet.data

Instrument.py
SF2Instrument.py
)

install(FILES ${PYTHON} DESTINATION ScoreDraft)
